--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -3,8 +3,12 @@
         <div class="f-info-social">
             <i class="fa-brands fa-square-facebook"></i>
             <i class="fa-brands fa-square-instagram"></i>
+            
+            <a href="https://www.linkedin.com/in/rahul-lodhi-614748258/">
             <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-square-github"></i>
+           </a>
+          
+            <a href="https://github.com/RAHUL676789/DeltaProject"><i class="fa-brands fa-square-github"></i></a>
         </div>
         <div class="company"> &copy; wanderLust private limited</div>
         <div class="f-info-link">
